# kubewarden-appuio-evaluation

./: LICENSE  Readme.md
go-policy-template/: Makefile  go.mod  go.sum  settings.go  settings_test.go  types.go  types_easyjson.go  validate.go  validate_test.go
kubewarden-policy-runonce-activedeadlineseconds/: Cargo.toml  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  metadata.yml
kubewarden-policy-runonce-activedeadlineseconds/.github/workflows/: release.yml
kubewarden-policy-runonce-activedeadlineseconds/src/: lib.rs  settings.rs
kubewarden-policy-runonce-activedeadlineseconds/test_data/: pod_RestartPolicy_Never.json  pod_without_restartPolicy.json
